tests/specs/ecosystem/bartlomieju/postgres/0_17_2.test
bartlomieju/postgres/0.17.2
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'QueryResult'.
   */ insertRow(row_data: Uint8Array[]): void {}
      ~~~~~~~~~
    at file://<tmpdir>/query/query.ts:101:7

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'QueryResult'.
   */ insertRow(row_data: Uint8Array[]): void {}
      ~~~~~~~~~
    at file://<tmpdir>/query/query.ts:114:7

Found 2 errors.

